Add full styles

--- a/index.html
+++ b/index.html
@@ -19,12 +19,78 @@
     <title>Four card feature section</title>
   </head>
   <body>
-    Reliable, efficient delivery Powered by Technology Our Artificial
-    Intelligence powered tools use millions of project data points to ensure
-    that your project is successful Supervisor Monitors activity to identify
-    project roadblocks Team Builder Scans our talent network to create the
-    optimal team for your project Karma Regularly evaluates our talent to ensure
-    quality Calculator Uses data from past projects to provide better delivery
-    estimates
+    <main class="main-container">
+      <div class="main-article__container grid-item-1">
+        <h1 class="main-heading">Reliable, efficient delivery</h1>
+        <h2 class="second-heading">Powered by Technology</h2>
+        <p class="main-article">
+          Our Artificial Intelligence powered tools use millions of project data
+          points to ensure that your project is successful
+        </p>
+      </div>
+      <div class="grid-item-2 card-container float-right container-shadow">
+        <div class="line-cyan"></div>
+        <div class="card-article">
+          <p class="card-article__heading">Supervisor</p>
+          <p class="card-article__text">
+            Monitors activity to identify project roadblocks
+          </p>
+        </div>
+        <div class="img-container">
+          <img
+            src="./images/icon-supervisor.svg"
+            alt="supervisor"
+            class="img"
+          />
+        </div>
+      </div>
+      <div class="grid-item-3 double-container">
+        <div class="card-container middle-container-1 container-shadow">
+          <div class="line-red"></div>
+          <div class="card-article">
+            <p class="card-article__heading">Team Builder</p>
+            <p class="card-article__text">
+              Scans our talent network to create the optimal team for your
+              project
+            </p>
+          </div>
+          <div>
+            <img
+              src="./images/icon-team-builder.svg"
+              alt="team-builder"
+              class="img"
+            />
+          </div>
+        </div>
+        <div class="card-container middle-container-2 container-shadow">
+          <div class="line-orange"></div>
+          <div class="card-article">
+            <p class="card-article__heading">Calculator</p>
+            <p class="card-article__text">
+              Uses data from past projects to provide better delivery estimates
+            </p>
+          </div>
+          <div>
+            <img
+              src="./images/icon-calculator.svg"
+              alt="calculator"
+              class="img"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="grid-item-4 card-container container-shadow">
+        <div class="line-blue"></div>
+        <div class="card-article">
+          <p class="card-article__heading">Karma</p>
+          <p class="card-article__text">
+            Regularly evaluates our talent to ensure quality
+          </p>
+        </div>
+        <div>
+          <img src="./images/icon-karma.svg" alt="karma" class="img" />
+        </div>
+      </div>
+    </main>
   </body>
 </html>
