Change div with article in card containers

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           points to ensure that your project is successful
         </p>
       </div>
-      <div class="grid-item-2 card-container float-right container-shadow">
+      <article class="grid-item-2 card-container float-right container-shadow">
         <div class="line-cyan"></div>
         <div class="card-article">
           <p class="card-article__heading">Supervisor</p>
@@ -43,9 +43,9 @@
             class="img"
           />
         </div>
-      </div>
+      </article>
       <div class="grid-item-3 double-container">
-        <div class="card-container middle-container-1 container-shadow">
+        <article class="card-container middle-container-1 container-shadow">
           <div class="line-red"></div>
           <div class="card-article">
             <p class="card-article__heading">Team Builder</p>
@@ -61,8 +61,8 @@
               class="img"
             />
           </div>
-        </div>
-        <div class="card-container middle-container-2 container-shadow">
+        </article>
+        <article class="card-container middle-container-2 container-shadow">
           <div class="line-orange"></div>
           <div class="card-article">
             <p class="card-article__heading">Calculator</p>
@@ -77,9 +77,9 @@
               class="img"
             />
           </div>
-        </div>
+        </article>
       </div>
-      <div class="grid-item-4 card-container container-shadow">
+      <article class="grid-item-4 card-container container-shadow">
         <div class="line-blue"></div>
         <div class="card-article">
           <p class="card-article__heading">Karma</p>
@@ -90,7 +90,7 @@
         <div>
           <img src="./images/icon-karma.svg" alt="karma" class="img" />
         </div>
-      </div>
+      </article>
     </main>
   </body>
 </html>
